quorum/test/tests/TypeChecker/Pass/ExpAssignTextNumObj.quorum
Number num
num:SetValue(7.5)
text t = cast(text, num)