quorum/test/tests/TypeChecker/Fail/ImpAssignTextNumObj.quorum
Number num
num:setValue(7.5)
text t = num